--- a/_config.yml
+++ b/_config.yml
@@ -1,52 +1,18 @@
 # Site settings
-title:       Nanne
+title:       "Nanne"
 email:       nanne@uvt.nl
 author:      Nanne van Noord
-description: "A website."
-baseurl:     ""
 url:         "http://nanne.github.io"
-
-# Google analytics
-google_analytics:
-
-# Optional features
-animated:           false
-show_related_posts: false
-show_post_footers:  false
-
-# Disqus post comments
-# (leave blank to disable Disqus)
-disqus_shortname:
+description: "Everything about me in one spot!"
 
 # Social icons
 show_social_icons: true
 github_username: nanne
 scholar_username: wFDJzDkAAAAJ
-stackoverflow_id:
 twitter_username: nannevn
-google_plus_id:
-linkedin_username:
-angellist_username:
-bitcoin_url:
-paypal_url:
-flattr_button:
-
-# Post sharing icons
-show_sharing_icons: false
-share_text: 'Share this post!'
-# Change to 'true' to enable individual icons
-share_facebook: false
-share_twitter: false
-share_googleplus: false
-share_linkedin: false
-share_digg: false
-share_tumblr: false
-share_reddit: false
-share_stumbleupon: false
-share_hackernews: false
 
 # Build settings
+markdown:     kramdown
 permalink:    pretty
-paginate:     3
 sass:
   compressed: true
