Got rid of silly title

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-tactile
-title:       "Homepage"
+title:       "Nanne"
 email:       nanne@uvt.nl
 author:      Nanne van Noord
 url:         "http://nanne.github.io"
