--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: jekyll-theme-tactile
 title:       "Nanne"
-email:       nanne@uvt.nl
+email:       nannevannoord@gmail.com
 author:      Nanne van Noord
 url:         "http://nanne.github.io"
 description: "Page with very little info about me"
