--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ plainwhite:
       url: "mailto:n.j.e.vannoord@uva.nl"
 
 # Build settings
+remote_theme: samarsault/plainwhite-jekyll
 markdown:     kramdown
 permalink:    pretty
 sass:
