--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
 remote_theme: samarsault/plainwhite-jekyll
-
-theme: plainwhite
 title:       "Nanne"
 email:       nannevannoord@gmail.com
 author:      Nanne van Noord
@@ -37,3 +35,5 @@ markdown:     kramdown
 permalink:    pretty
 sass:
         sass_dir: _sass
+plugins: 
+  - jekyll-seo-tag
